--- a/index.html
+++ b/index.html
@@ -868,21 +868,21 @@
         <div class="hero-visual">
             <div class="art-slider">
                 <div class="slide active">
-                    <img src="/img/cyberpunk.webp" alt="Cyber Nexus">
+                    <img src="./img/cyberpunk.webp" alt="Cyber Nexus">
                     <div class="slide-content">
                         <div class="slide-title">Cyberpunk2077</div>
                         <div class="slide-description">Киберпанк RPG с открытым миром</div>
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="/img/ArcticSurvival.png" alt="Arctic Survival">
+                    <img src="./img/ArcticSurvival.png" alt="Arctic Survival">
                     <div class="slide-content">
                         <div class="slide-title">Arctic Survival</div>
                         <div class="slide-description">Хардкорный симулятор выживания</div>
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="/img/dark.jpg" alt="Mythic Realms">
+                    <img src="./img/dark.jpg" alt="Mythic Realms">
                     <div class="slide-content">
                         <div class="slide-title">Dark Asylum</div>
                         <div class="slide-description">Хоррор</div>
@@ -1311,4 +1311,5 @@
 </body>
 
 </html>
+
 
