--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
         <div class="hero-visual">
             <div class="art-slider">
                 <div class="slide active">
-                    <img src="./img/cyberpunk.webp" alt="Cyber Nexus">
+                    <img src="https://newcdn.igromania.ru/mnt/games/4/9/4/a/d/0/14727/73f7677257f9bfa6_original.webp" alt="Cyber Nexus">
                     <div class="slide-content">
                         <div class="slide-title">Cyberpunk2077</div>
                         <div class="slide-description">Киберпанк RPG с открытым миром</div>
@@ -1311,5 +1311,6 @@
 </body>
 
 </html>
+
 
 
