--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
         <div class="team-grid">
             <div class="team-member">
                 <div class="member-avatar">
-                    <img src="/img/i (2).webp" alt="Алексей Петров">
+                    <img src="./img/i (2).webp" alt="Алексей Петров">
                 </div>
                 <h3 class="member-name">Алексей Петров</h3>
                 <p class="member-role">Геймдизайнер</p>
@@ -1311,6 +1311,7 @@
 </body>
 
 </html>
+
 
 
 
