--- a/index.html
+++ b/index.html
@@ -1203,8 +1203,8 @@
                 <div class="slide">
                     <img src="https://cdn1.epicgames.com/spt-assets/f860c975e5f041aa895eaef6201e066a/extreme-offroad-racing-1rqz8.jpg" alt="Arctic Survival">
                     <div class="slide-content">
-                        <div class="slide-title">Arctic Survival</div>
-                        <div class="slide-description">Хардкорный симулятор выживания</div>
+                        <div class="slide-title">Extreme Racing</div>
+                        <div class="slide-description">Хардкорный симулятор гонок</div>
                     </div>
                 </div>
                 <div class="slide">
@@ -1661,9 +1661,9 @@
                 image: 'https://newcdn.igromania.ru/mnt/games/4/9/4/a/d/0/14727/73f7677257f9bfa6_original.webp'
             },
             'arctic-survival': {
-                title: 'Arctic Survival',
-                description: 'Хардкорный симулятор выживания в арктических условиях. Игрокам предстоит бороться с экстремальными температурами, дикими животными и собственными страхами.',
-                genre: 'Симулятор выживания',
+                title: 'Extreme Racing',
+                description: 'Испытайте адреналин на самых опасных трассах мира. Настройте свой автомобиль, участвуйте в турнирах и станьте легендой гоночного спорта. Реалистичная физика и потрясающая графика погрузят вас в мир скоростных соревнований.',
+                genre: 'Гонки',
                 platforms: 'PC, PlayStation, Xbox, Nintendo Switch',
                 year: '2021',
                 rating: '8.7/10',
@@ -1781,4 +1781,5 @@
 </body>
 
 </html>
+
 
